test/expected/explain_uv.out
explain unsigned void x
                 ^
18: error: "unsigned void" is illegal for built-in type
